Fix bug on firefox: the bottom of placeholder in input was cut

--- a/source/_css/components/_form.scss
+++ b/source/_css/components/_form.scss
@@ -4,6 +4,7 @@
     border:     none;
     outline:    none;
     color:      map-get($colors, base);
+    font-weight: 300;
 
     &:hover,
     &:focus {
@@ -13,5 +14,5 @@
 
 // Input size variant
 .input--xlarge {
-    @include input-size-variant(auto, 10px 0, 25px, 25px);
+    @include input-size-variant(auto, 10px 0, 25px, 30px);
 }
